# lanyuan

./: Dockerfile  Issues.md  README.md  RELEASE.md  prd.md  proto.html
backend/: Dockerfile  find_missing_payment.py  getPaymentInfo.js  package-lock.json  package.json  payment_info.csv  payment_info_1.csv  payment_info_2.csv  server.js  units.js  units.md
backend/sql/: generated_payment.sql  payment_all.sql  payment_info_table.sql  room_info_table.sql
data/: lanyuan-2024.json
data/sql/: csv2sql.md  csv_to_sql.py  generate_rooms.sql
django/: README.md  db.sqlite3  manage.py  requirements.txt  schedule_tasks.py  start_server.py
django-mysql/: .env.example  CHROME_FIX.md  DATABASE_SCHEMA.md  Dockerfile  PRD.md  PRODUCTION_README.md  PROGRESS.md  README.md  ROOM_STATISTICS.md  SUMMARY.md  TESTING.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
django-mysql/data/sql/: create_customer_table.sql  update_schema.sql
django-mysql/payment_app/: apps.py  models.py  tasks.py  urls.py  views.py
django-mysql/payment_app/management/commands/: run_scheduler.py  run_task_once.py
django-mysql/payment_app/migrations/: 0001_initial.py
django-mysql/payment_app/services/: api_client.py  data_saver.py  room_generator.py
django-mysql/payment_service/: settings.py  urls.py  wsgi.py
django/api/: tasks.py  urls.py  views.py
django/lanyuan/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
doc/: Issues.md  express2django.md  proto.md
miniprogram/: app.js  app.json  app.wxss  project.config.json  project.private.config.json
(+16 files in other folders)
