[project]
name = "django-mysql-service"
version = "1.0.0"
description = "Django service for room payment tracking"
requires-python = ">=3.8"
dependencies = [
    "Django>=4.2",
    "mysqlclient>=2.1",
    "requests>=2.31",
    "APScheduler>=3.10",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"